--- a/EF7EntityApp/src/EF7EntityApp/Views/Main/Index.html
+++ b/EF7EntityApp/src/EF7EntityApp/Views/Main/Index.html
@@ -2,9 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Тестовое приложение Angular2</title>
+    <script src="~/lib/es6-shim.min.js"></script>
+    <script src="~/lib/system-polyfills.js"></script>
+    <script src="~/lib/shims_for_IE.js"></script>
+
+    <script src="~/lib/angular2-polyfills.js"></script>
+    <script src="~/lib/system.src.js"></script>
+    <script src="~/lib/Rx.js"></script>
+    <script src="~/lib/angular2.dev.js"></script>
+
+    <script>
+        System.config({
+            packages: {
+                app: {
+                    defaultExtension: 'js'
+                }
+            }
+        });
+    </script>
+    <script>
+        System.import('app/app').then(null, console.error.bind(console));
+    </script>
 </head>
 <body>
-
+<h3>Hi</h3>
+<my-app></my-app>
 </body>
 </html>
